# django-rsgi

./: LICENSE  README.md  benchmark.py  pyproject.toml
example/: README.md
example/config/: rsgi.py  settings.py  urls.py  views.py
src/django_rsgi/: __init__.py  handler.py
tests/: conftest.py  mocks.py  test_get_rsgi_application.py  test_handler.py  urls.py
