[project]
name = "django-rsgi"
version = "0.1.0"
description = "RSGI support for Django"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = [
  "LICENSE",
]
keywords = [
  "django",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 4",
  "Framework :: Django :: 5",
]
dependencies = [
    "django>=5.0",
    "asgiref>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
]

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
